# airway-demo

./: .coverage  .dockerignore  .env  .env.example  CLAUDE.md  Dockerfile  dashboard.py  demo.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.json
.claude/agents/: architect.md  backend-developer.md  data-engineer.md  demand-analyst.md  ml-engineer.md  network-planner.md  ops-sme.md  qa-engineer.md
.claude/skills/api-design/: SKILL.md
.claude/skills/decision-log/: SKILL.md
.claude/skills/ml-patterns/: SKILL.md
.claude/skills/python-standards/: SKILL.md
.github/workflows/: ci.yml
docs/: ML-FRAMEWORK-uld-forecasting.md
docs/decisions/: API-001-flight-data-apis.md  API-002-weather-events-apis.md  ARCH-001-geolocation-frequency.md  DATA-001-datasets-strategy.md  ML-001-forecasting-approach.md  README.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
src/api/: __init__.py  dependencies.py  main.py
src/data/clients/: base.py  (+4 more)
src/database/: __init__.py  models.py  repository.py  session.py
src/domain/: __init__.py  flight.py  forecast.py  recommendation.py  station.py  uld.py
src/forecasting/: __init__.py  anomaly.py  cold_start.py  evaluation.py  features.py  hierarchy.py  models.py  uncertainty.py
src/services/: __init__.py  forecasting.py  optimization.py  recommendations.py  tracking.py
static/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_domain.py  test_services.py  test_synthetic.py
(+29 files in other folders)
