[project]
name = "uld-forecasting"
version = "0.1.0"
description = "ULD Forecasting & Allocation System for Delta Airlines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Data Science
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "polars>=0.20.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "prophet>=1.1.5",
    "scipy>=1.12.0",

    # Optimization
    "ortools>=9.8",

    # Synthetic Data
    "faker>=22.0.0",

    # Visualization
    "plotly>=5.18.0",

    # Utilities
    "python-dateutil>=2.8.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.92.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pandas-stubs>=2.1.0",
    "ipykernel>=6.28.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
